tests/lean/389.lean.expected.out
389.lean:7:14-7:17: error: Application type mismatch: In the application
  getFoo bar
the argument
  bar
has type
  Bar Nat : Type
but is expected to have type
  Foo ?m : Type
getFoo bar.toFoo : Nat
